<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:layout_editor_absoluteX="-196dp"
        tools:layout_editor_absoluteY="-296dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/home_preferanser"
            android:textAppearance="@style/Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/preferences_lengdePaaSpill"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFemSpill"
            android:layout_width="279dp"
            android:layout_height="113dp"
            android:text="@string/femSpill"
            android:layout_marginTop="60dp"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/btnTiSpill"
            android:layout_width="279dp"
            android:layout_height="113dp"
            android:text="@string/tiSpill"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/btnFemtenSpill"
            android:layout_width="279dp"
            android:layout_height="113dp"
            android:text="@string/femtenSpill"
            android:textSize="25sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>