<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient_home"
    android:id="@+id/main"
    android:orientation="vertical"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="281dp"
        android:layout_height="349dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/txtTitle"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:srcCompat="@drawable/astronaut_home" />

    <Button
        android:id="@+id/BtnStartSpill"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_button_home"
        android:text="@string/home_startSpill"
        android:textColorLink="#673AB7"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/BtnOmSpill"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_home"
        android:text="@string/home_omSpillet"
        android:textColorLink="#673AB7"
        app:layout_constraintEnd_toEndOf="@+id/BtnStartSpill"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/BtnStartSpill"
        app:layout_constraintTop_toBottomOf="@+id/BtnStartSpill" />

    <Button
        android:id="@+id/BtnPreferanser"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_home"
        android:text="@string/home_preferanser"
        android:textColorLink="#673AB7"
        app:layout_constraintEnd_toEndOf="@+id/BtnOmSpill"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/BtnOmSpill"
        app:layout_constraintTop_toBottomOf="@+id/BtnOmSpill" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>