<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_home"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtTittel"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/startSpill_Tittel"
        android:textAlignment="center"
        android:textAppearance="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/startSpill_klar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtTittel"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/txtTittel"
        app:layout_constraintTop_toBottomOf="@+id/txtTittel" />


    <Button
        android:id="@+id/btnKlar"
        android:layout_width="157dp"
        android:layout_height="74dp"
        android:layout_marginTop="56dp"
        android:elevation="10dp"
        android:text="@string/startSpill_knapp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="225dp"
        android:layout_height="304dp"

        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/txtTekst"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/txtTekst"
        app:layout_constraintTop_toBottomOf="@+id/txtTekst"
        app:srcCompat="@drawable/astronautstartspill" />


</androidx.constraintlayout.widget.ConstraintLayout>
