<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_home"
    >

    <TextView
        android:id="@+id/txtPreferanse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/home_preferanser"
        android:textAppearance="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="239dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/txtPreferanse"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/txtPreferanse"
        app:layout_constraintTop_toBottomOf="@+id/txtPreferanse"
        app:srcCompat="@drawable/astronaut_home" />

    <Button
        android:id="@+id/btnSpilleregler"
        android:layout_width="240dp"
        android:layout_height="83dp"
        android:layout_marginTop="360dp"
        android:text="@string/preferences_spilleregler"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtPreferanse"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/txtPreferanse"
        app:layout_constraintTop_toBottomOf="@+id/txtPreferanse" />

    <Button
        android:id="@+id/btnVelgSpraak"
        android:layout_width="240dp"
        android:layout_height="83dp"
        android:layout_marginTop="28dp"
        android:text="@string/preferences_velgSprak"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnSpilleregler"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSpilleregler"
        app:layout_constraintTop_toBottomOf="@+id/btnSpilleregler" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="113dp"
        android:layout_height="151dp"
        android:layout_marginTop="356dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="@+id/btnSpilleregler"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="68dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="@+id/btnVelgSpraak"
        app:layout_constraintTop_toBottomOf="@+id/btnSpilleregler"
        app:srcCompat="@drawable/flagg" />

</androidx.constraintlayout.widget.ConstraintLayout>